<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/settings"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="#F6CC51"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="70dp"
        android:transitionName="@string/stc_trans">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:textColor="#000000"
            android:text="@string/settings"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
             />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/chats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/chats"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/settings"
        app:layout_constraintStart_toEndOf="@id/shop"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shops"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="70dp"
        android:textSize="12sp" />


</androidx.constraintlayout.widget.ConstraintLayout>